# vllm-mlx

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/guides/: audio.md
tests/: test_api_utils.py  test_audio.py  test_batching.py  test_batching_deterministic.py  test_continuous_batching.py  test_harmony_integration.py  test_harmony_parsers.py  test_mcp_security.py  test_mllm.py  test_mllm_continuous_batching.py  test_paged_cache_benefits.py  test_paged_cache_real_inference.py  test_paged_cache_real_model.py  test_platform.py  test_prefix_cache.py  test_server.py  test_streaming_detokenizer.py  test_streaming_json_encoder.py  test_streaming_latency.py  test_vlm_cache.py
tests/evals/gsm8k/: gsm8k_eval.py
vllm_mlx/: __init__.py  attention.py  benchmark.py  cli.py  engine.py  engine_core.py  mllm_batch_generator.py  mllm_scheduler.py  multimodal_processor.py  platform.py  prefix_cache.py  request.py  scheduler.py  server.py  server_v2.py  vision_embedding_cache.py  vlm_cache.py  worker.py
vllm_mlx/api/: streaming.py  tool_calling.py  utils.py
vllm_mlx/audio/: tts.py
vllm_mlx/engine/: batched.py  simple.py
vllm_mlx/mcp/: security.py  types.py
vllm_mlx/models/: mllm.py
vllm_mlx/reasoning/: harmony_parser.py
vllm_mlx/tool_parsers/: harmony_tool_parser.py
